--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </ul>
 
                 </nav>
-                
+
             </div>
 
             <div class="sq">
@@ -78,6 +78,31 @@
             </div>
 
         </header>
+
+        <main>
+            <div class="container">
+                <section class="about">
+
+                    <h2>Найт-Сити изменит тебя навсегда!</h2>
+                    <p><span>Cyberpunk 2077</span> — приключенческая ролевая игра, действие
+                        которой происходит в мегаполисе Найт-Сити, где власть,
+                        роскошь и модификации тела ценятся выше всего. Ты
+                        играешь за V, наёмника в поисках устройства,
+                        позволяющего обрести бессмертие. Ты сможешь менять
+                        киберимпланты, навыки и стиль игры своего персонажа,
+                        исследуя открытый мир, где твои поступки влияют на ход
+                        сюжета и всё, что тебя окружает.
+                    </p>
+
+                    <div class="about__images">
+                        <img class="about__img-1" src="/images/about1.png" alt="about CyberPunk">
+                        <img class="about__img-2" src="/images/about2.png" alt="about CyberPunk">
+                        <img class="about__img-3" src="/images/about3.png" alt="about CyberPunk">
+                    </div>
+
+                </section>
+            </div>
+        </main>
 
     </body>
 
